# SeetaFaceEngine

./: CMakeLists.txt
FaceAlignment/: CMakeLists.txt
FaceAlignment/src/: cfan.cpp
FaceDetection/: CMakeLists.txt
FaceDetection/src/: face_detection.cpp
FaceIdentification/: CMakeLists.txt
FaceIdentification/include/: face_identification.h
